[Adharsh] Updates attack unlockers to declare the appropriate lists