@@ -1,14 +1,15 @@
 package game.AttackUnlocker;
 
-import com.sun.tools.javac.util.List;
-
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 
 public class WaterAttackUnlocker extends AttackUnlocker{
 
     private static HashMap<Integer, List<String>> attackList = new HashMap<Integer, List<String>>() {{
-        put(1, List.of("Dash"));
-        put(2, List.of("Dash", "WaterGun"));
+        put(1, Collections.singletonList("Dash"));
+        put(2, Arrays.asList("Dash", "WaterGun"));
     }};
 
 }
